# github_alex_repo

./: README.md
.github/workflows/: tag-on-merge.yml
ALEX-dev/ALEX-dev/: .gitignore  .gitmodules  ALEX.repos  Dockerfile  README.md  docker_entrypoint.sh  requirements.txt
ALEX-dev/ALEX-dev/alex_bringup/: package.xml  setup.cfg  setup.py
ALEX-dev/ALEX-dev/alex_bringup/alex_bringup/: lifecycle_node_waiter.py  node_checker.py  startup_diagnostics.py
ALEX-dev/ALEX-dev/alex_bringup/launch/: alex_bringup.launch.py
ALEX-dev/ALEX-dev/alex_bringup/params/: device_configuration.yaml
ALEX-dev/ALEX-dev/alex_communication/: package.xml  setup.cfg  setup.py
ALEX-dev/ALEX-dev/alex_communication/alex_communication/: communication_master.py  config_fetcher.py  mqtt_client_node.py  urp_client_node.py  webrtc_client.py
ALEX-dev/ALEX-dev/alex_communication/launch/: alex_communication.launch.py
ALEX-dev/ALEX-dev/alex_communication/params/: alex_communication.yaml
ALEX-dev/ALEX-dev/alex_controller/: package.xml  setup.cfg  setup.py
ALEX-dev/ALEX-dev/alex_controller/alex_controller/: actuated_ph_control.py  alex_mode_regulator.py  automated_weight_balance.py  follow_object_demo.py  logic_controller_node.py  raven_parser.py  robot_arm_controller.py
ALEX-dev/ALEX-dev/alex_controller/launch/: alex_controller.launch.py
ALEX-dev/ALEX-dev/alex_externals/: README.md  package.xml  setup.cfg  setup.py
ALEX-dev/ALEX-dev/alex_gazebo/: README.md  package.xml  setup.cfg  setup.py
ALEX-dev/ALEX-dev/alex_intelligence/: package.xml  setup.cfg  setup.py
ALEX-dev/ALEX-dev/alex_interfaces/: CMakeLists.txt  package.xml
ALEX-dev/ALEX-dev/alex_interfaces/action/: ExecuteActionFile.action  ObjectPickUp.action
ALEX-dev/ALEX-dev/alex_interfaces/msg/: ActionFileInterface.msg  ActionFileInterfaceReference.msg  ActiveNodes.msg  ActiveNodesStatus.msg  CentrifugeStatus.msg  CobotAction.msg  CobotUpdates.msg  Homogenizer.msg  LiquidDosingStatus.msg  LiquidVolumeStatus.msg  MagneticStirrer.msg  ModeStatus.msg  MqttMessage.msg  NodeItem.msg  QuantityValue.msg  SerialMessage.msg  SocketMessage.msg  Sonicator.msg  TemperatureStatus.msg  Weight.msg
ALEX-dev/ALEX-dev/alex_interfaces/srv/: ActivatingNodes.srv  ArmCommand.srv  CentrifugeCommand.srv  ControlMode.srv  DCActuator.srv  GripperCommand.srv  HomogenizerCommand.srv  LiquidDoserCommand.srv  LiquidLevelCommand.srv  MagneticStirrerCommand.srv  MeasurePhCommand.srv  MeasureWeights.srv  MqttAttributes.srv  ObjectPoseDetection.srv  PHMeterCommand.srv  PauseResumeAction.srv  RobotCommand.srv  SerialConnectionStatus.srv  SonicatorCommand.srv  StepperActuatorCommand.srv  SwitchCamera.srv  TemperatureCommand.srv  WeightCommand.srv
ALEX-dev/ALEX-dev/alex_lab_objects/: package.xml  setup.cfg  setup.py
ALEX-dev/ALEX-dev/alex_utilities/: package.xml  setup.cfg  setup.py
ALEX-dev/ALEX-dev/alex_utilities/alex_utilities/: __init__.py  camera_utilities.py  common_utilities.py  custom_retry.py  device_configuration_handler.py  external_constants.py  get_port.py  node_checker_service_action.py  urp_auth_utilities.py
ALEX-dev/ALEX-dev/alex_utilities/docs/: node_checker_service_action.md
ALEX-dev/ALEX-dev/samples/: sample_afi_1_e2e.json  sample_afi_2_move_only.json  sample_afi_3_move_add.json  sample_afi_4_move_stir_add.json
(+100 files in other folders)
