<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alex_utilities</name>
  <version>0.0.0</version>
  <description>Contains all the python importable utility function and tools</description>
  <maintainer email="gautham.sam@neuralfoundry.co.uk">Gautham Sam</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>python3-pydantic</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
